--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ contourpy==1.3.3
 cycler==0.12.1
 debugpy==1.8.15
 decorator==5.2.1
+demjson3==3.0.6
 docopt==0.6.2
 dotenv==0.9.9
 executing==2.2.0
